--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
 		<style>
 			body { margin: 0; }
 		</style>
+        <!--Import scripts for simple three.js dice roller-->
+        <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+        <script type="importmap">
+          {
+            "imports": {
+              "three": "https://unpkg.com/three@0.153.0/build/three.module.js",
+              "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+            }
+          }
+        </script>
 	</head>
 	<body>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
+
+
