--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </script>
 	</head>
 	<body>
-		<script type="module" src="\\js\main.js"></script>
+		<script type="module" src="/js/main.js"></script>
 	</body>
 </html>
 
