Converted file structure to run locally

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           {
             "imports": {
               "three": "https://unpkg.com/three@0.153.0/build/three.module.js",
-              "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+              "three/addons/": "https://unpkg.com/three@0.153.0/examples/jsm/"
             }
           }
         </script>
