added html line to resolve favicon.ico error

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+    <link rel="icon" href="data:;base64,=">
 		<title>My first three.js app</title>
 		<style>
 			body { margin: 0; }
 		</style>
 	</head>
 	<body>
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="js/main.js"></script>
 	</body>
 </html>
 
