added line to remove favicon.ico error

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+    <!--code to remove favicon.ico error message-->
     <link rel="icon" href="data:;base64,=">
 		<title>My first three.js app</title>
 		<style>
